--- a/practice/1_14_model_earlystopping.ipynb
+++ b/practice/1_14_model_earlystopping.ipynb
@@ -2,26 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": null,
    "id": "4ffa8ff3-99c5-4453-84ed-e94b69ec1a79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'vae_earlystopping'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mnn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnn\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mnn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mfunctional\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mF\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mvae_earlystopping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m EarlyStopping\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m  DataLoader, Dataset\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmodel_vae\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m CVAE, cvae_loss\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'vae_earlystopping'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from vae_earlystopping import EarlyStopping\n",
+    "# from vae_earlystopping import EarlyStopping\n",
     "from torch.utils.data import  DataLoader, Dataset\n",
-    "from model_vae import CVAE,cvae_loss_each,cvae_loss_optimized,cvae_loss\n",
-    "from vae_earlystopping import EarlyStopping\n",
+    "# from model_vae import CVAE, cvae_loss\n",
+    "# from vae_earlystopping import EarlyStopping\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 4,
    "id": "36d63908-2ec9-4541-8ed6-d8f3585e5235",
    "metadata": {},
    "outputs": [],
@@ -32,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 5,
    "id": "b7966f98-4cbc-4723-a0ec-e58ddddee6a3",
    "metadata": {},
    "outputs": [
@@ -42,7 +54,7 @@
        "(5908, 23)"
       ]
      },
-     "execution_count": 551,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 6,
    "id": "4f700817-f165-49ad-bf94-0daa6c54d107",
    "metadata": {},
    "outputs": [
@@ -92,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 7,
    "id": "cd72e0bc-f192-459e-a300-f69b14e0f40a",
    "metadata": {},
    "outputs": [],
@@ -110,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 8,
    "id": "c93a751d-5f04-4df1-93ff-983ae2540c61",
    "metadata": {},
    "outputs": [],
@@ -129,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 9,
    "id": "1213b41f-d9dc-4ca3-919e-d4ea37fc3e7a",
    "metadata": {},
    "outputs": [],
@@ -146,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 10,
    "id": "32715ce3-d647-4146-a487-480aa3d85159",
    "metadata": {},
    "outputs": [
@@ -156,7 +168,7 @@
        "torch.utils.data.dataset.TensorDataset"
       ]
      },
-     "execution_count": 556,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 11,
    "id": "c5ae842b-b8ab-4344-9d33-dc43aeb810dd",
    "metadata": {},
    "outputs": [
@@ -185,7 +197,7 @@
        "torch.utils.data.dataloader.DataLoader"
       ]
      },
-     "execution_count": 557,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 12,
    "id": "105c10d6-697a-4b90-81fe-b8147382873d",
    "metadata": {},
    "outputs": [
@@ -226,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 13,
    "id": "b7670de9-27bb-4dde-858b-e9933c54b820",
    "metadata": {},
    "outputs": [],
@@ -238,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 14,
    "id": "e442e768-7b8d-41f2-ac73-e82d0e55c1ad",
    "metadata": {},
    "outputs": [],
@@ -259,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": null,
    "id": "89439f9d-1100-4a62-8f89-c92045502762",
    "metadata": {},
    "outputs": [
@@ -267,15 +279,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1/200] train_loss:0.0001, val_loss:0.0050\n",
-      "[20/200] train_loss:0.0000, val_loss:0.0043\n",
-      "[40/200] train_loss:0.0000, val_loss:0.0039\n",
-      "[60/200] train_loss:0.0000, val_loss:0.0036\n",
-      "[80/200] train_loss:0.0000, val_loss:0.0034\n",
-      "[100/200] train_loss:0.0000, val_loss:0.0033\n",
-      "[120/200] train_loss:0.0000, val_loss:0.0033\n",
-      "[140/200] train_loss:0.0000, val_loss:0.0032\n",
-      "Early stopping at epoch 148. Best epoch:118, Best val loss: 0.003260\n"
+      "[1/200] train_loss:0.0005, val_loss:0.0272\n",
+      "[20/200] train_loss:0.0001, val_loss:0.0048\n",
+      "[40/200] train_loss:0.0001, val_loss:0.0047\n",
+      "[60/200] train_loss:0.0001, val_loss:0.0045\n",
+      "[80/200] train_loss:0.0000, val_loss:0.0044\n",
+      "[100/200] train_loss:0.0000, val_loss:0.0043\n",
+      "[120/200] train_loss:0.0000, val_loss:0.0042\n",
+      "[140/200] train_loss:0.0000, val_loss:0.0041\n",
+      "[160/200] train_loss:0.0000, val_loss:0.0039\n"
      ]
     }
    ],
@@ -332,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": null,
    "id": "79f4da29-b494-4c34-9fe4-021bbd783019",
    "metadata": {},
    "outputs": [
@@ -364,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": null,
    "id": "21e93740-7c62-4ace-aa7b-ab156d376d44",
    "metadata": {},
    "outputs": [
@@ -385,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": null,
    "id": "36fee4dc-2bc5-454b-b241-745eed77aeb1",
    "metadata": {},
    "outputs": [
@@ -413,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": null,
    "id": "06c2182e-301f-4d76-b1e7-7a5e06e86f66",
    "metadata": {},
    "outputs": [
@@ -445,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": null,
    "id": "fae7d001-3d03-4fe8-802b-2a285454cc81",
    "metadata": {},
    "outputs": [],
@@ -462,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": null,
    "id": "90aa0c0c-bfe5-4b03-bba0-305f6c124784",
    "metadata": {},
    "outputs": [],
@@ -475,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": null,
    "id": "b2c5654b-d8e0-484f-a428-e77f79b92c5b",
    "metadata": {},
    "outputs": [],
@@ -486,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": null,
    "id": "795538ba-90a9-4ee4-be9d-0e12c109e77b",
    "metadata": {},
    "outputs": [
@@ -509,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": null,
    "id": "27685213-a080-4f4e-a083-c0a10d1d9032",
    "metadata": {},
    "outputs": [
@@ -536,9 +548,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (torch_gpu)",
+   "display_name": "torch_gpu",
    "language": "python",
-   "name": "torch_gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
