--- a/practice/model_setting.ipynb
+++ b/practice/model_setting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "0fe16081",
    "metadata": {},
    "outputs": [],
@@ -11,15 +11,47 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from vae_earlystopping import EarlyStopping\n",
     "from torch.utils.data import  DataLoader, Dataset\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "x_data = np.load('./data/metal.npy',allow_pickle = True)\n",
-    "c_data = np.load('./data/reaction.npy',allow_pickle = True)\n",
-    "sup_data = np.load('./data/support.npy',allow_pickle=True)\n"
+    "x_data = np.load('../data/metal.npy',allow_pickle = True)\n",
+    "c_data = np.load('../data/reaction.npy',allow_pickle = True)\n",
+    "sup_data = np.load('../data/support.npy',allow_pickle=True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "687c1b46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os,sys\n",
+    "ROOT_DIR = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "if ROOT_DIR not in sys.path:\n",
+    "    sys.path.insert(0, ROOT_DIR)\n",
+    "from model_vae import CVAE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d54174f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\User\\\\Desktop\\\\intern_practicing\\\\practice\\\\..'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
