--- a/practice/earlystopping_optim.ipynb
+++ b/practice/earlystopping_optim.ipynb
@@ -5,21 +5,97 @@
    "execution_count": null,
    "id": "0fe16081",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './data/metal.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m x_data = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m./data/metal.npy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mallow_pickle\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     12\u001b[39m c_data = np.load(\u001b[33m'\u001b[39m\u001b[33m./data/reaction.npy\u001b[39m\u001b[33m'\u001b[39m,allow_pickle = \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     13\u001b[39m sup_data = np.load(\u001b[33m'\u001b[39m\u001b[33m./data/support.npy\u001b[39m\u001b[33m'\u001b[39m,allow_pickle=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\User\\anaconda3\\envs\\torch_gpu\\Lib\\site-packages\\numpy\\lib\\_npyio_impl.py:455\u001b[39m, in \u001b[36mload\u001b[39m\u001b[34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[39m\n\u001b[32m    453\u001b[39m     own_fid = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m    454\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m455\u001b[39m     fid = stack.enter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrb\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[32m    456\u001b[39m     own_fid = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    458\u001b[39m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: './data/metal.npy'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from vae_earlystopping import EarlyStopping\n",
+    "# from vae_earlystopping import EarlyStopping\n",
     "from torch.utils.data import  DataLoader, Dataset\n",
-    "from model_vae import CVAE,cvae_loss_each,cvae_loss_optimized,cvae_loss\n",
+    "# from model_vae import CVAE,cvae_loss_each,cvae_loss_optimized,cvae_loss\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2778a66c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "ROOT_DIR = os.path.abspath(os.path.join(os.getcwd(),'..'))\n",
+    "os.chdir(ROOT_DIR)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "aeb9de4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x_data = np.load('./data/metal.npy',allow_pickle = True)\n",
     "c_data = np.load('./data/reaction.npy',allow_pickle = True)\n",
-    "sup_data = np.load('./data/support.npy',allow_pickle=True)\n"
+    "sup_data = np.load('./data/support.npy',allow_pickle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "383b583c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reaction T, Reaction CH4, Reaction CO2, Reaction Ar, Reaction N2, Reaction He, GHSV, Time on stream, CH4 Conversion, "
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"211210-DRM-total.csv\")\n",
+    "metal_columns = df.iloc[:,76:].columns.to_list()\n",
+    "for metal in metal_columns:\n",
+    "    print(metal, end=', ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce22c50f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\User\\\\Desktop\\\\intern_practicing\\\\practice\\\\..'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.path.join(os.getcwd(),'..')"
    ]
   },
   {
