--- a/data_zscore.ipynb
+++ b/data_zscore.ipynb
@@ -58,9 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "x_scaler = MinMaxScaler()\n",
-    "c_scaler = MinMaxScaler()\n",
+    "from sklearn.preprocessing import StandardScaler # z_score\n",
+    "x_scaler = StandardScaler()\n",
+    "c_scaler = StandardScaler()\n",
     "x_train = x_scaler.fit_transform(x_train)\n",
     "c_train = c_scaler.fit_transform(c_train)\n",
     "x_val,x_test = [x_scaler.transform(x) for x in [x_val,x_test]]\n",
@@ -76,7 +76,7 @@
     {
      "data": {
       "text/plain": [
-       "['./torch/c_scaler.pkl']"
+       "['./torch/c_scaler_z.pkl']"
       ]
      },
      "execution_count": 14,
@@ -86,8 +86,8 @@
    ],
    "source": [
     "import joblib \n",
-    "joblib.dump(x_scaler,'./torch/x_scaler.pkl')\n",
-    "joblib.dump(c_scaler,'./torch/c_scaler.pkl')"
+    "joblib.dump(x_scaler,'./torch/x_scaler_z.pkl')\n",
+    "joblib.dump(c_scaler,'./torch/c_scaler_z.pkl')"
    ]
   },
   {
@@ -138,9 +138,9 @@
    "source": [
     "import os\n",
     "os.makedirs('torch',exist_ok = True)\n",
-    "torch.save(train_loader,\"torch/train_loader.pt\")\n",
-    "torch.save(val_loader,\"torch/val_loader.pt\")\n",
-    "torch.save(test_loader,\"torch/test_loader.pt\")"
+    "torch.save(train_loader,\"torch/train_loader_z.pt\")\n",
+    "torch.save(val_loader,\"torch/val_loader_z.pt\")\n",
+    "torch.save(test_loader,\"torch/test_loader_z.pt\")"
    ]
   }
  ],
