--- a/epoch_loss2.ipynb
+++ b/epoch_loss2.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1c5626fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "from model_vae_no_sig import CVAE, cvae_loss ## 따로 sigmoid 진행하지 않았음\n",
+    "from model.model_vae_no_sig import CVAE, cvae_loss ## 따로 sigmoid 진행하지 않았음\n",
     "from vae_earlystopping import EarlyStopping\n",
     "import numpy as np\n",
     "import joblib\n",
