--- a/data_minmax.ipynb
+++ b/data_minmax.ipynb
@@ -13,13 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "26439ff9",
    "metadata": {},
    "outputs": [],
    "source": [
     "x_data = np.load('./data/metal.npy')\n",
-    "c_data = np.load('./data/reaction.npy')"
+    "c_data = np.load('./data/reaction.npy')\n",
+    "s_data = np.load('./data/support.npy')"
    ]
   },
   {
@@ -146,7 +147,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_gpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
