--- a/earlier_practice/epoch_loss3 copy.ipynb
+++ b/earlier_practice/epoch_loss3 copy.ipynb
@@ -490,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_gpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
