--- a/practice/model_setting.ipynb
+++ b/practice/model_setting.ipynb
@@ -607,7 +607,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_gpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
