--- a/data_1preprocessing.ipynb
+++ b/data_1preprocessing.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f42b2e25",
+   "execution_count": 65,
+   "id": "a0b225a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,19 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "26439ff9",
+   "execution_count": 66,
+   "id": "b6e6a7cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "x_data = np.load('./data/metal.npy')\n",
-    "c_data = np.load('./data/reaction.npy')\n",
-    "s_data = np.load('./data/support.npy')"
+    "c_data = np.load('./data/reaction.npy')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "18a2e9cf",
+   "id": "ed38d1d2",
    "metadata": {},
    "source": [
     "### train_test_split을 활용해 데이터를 train,val,test로 해서 0.6,0.2,0.2로 나눠서 구분\n",
@@ -34,67 +33,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "23700e0f",
+   "execution_count": 67,
+   "id": "bad72b39",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "x_train,x_test,c_train,c_test = train_test_split(x_data,c_data,random_state = 21,test_size = 0.4)\n",
-    "x_val,x_test,c_val,c_test = train_test_split(x_test,c_test,random_state = 21, test_size = 0.5)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e2de9846",
-   "metadata": {},
-   "source": [
-    "### MinMaxScaler을 활용해서 데이터를 normalization진행"
+    "x_val,x_test,c_val,c_test = train_test_split(x_test,c_test,random_state = 21, test_size = 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "403e5865",
+   "execution_count": 68,
+   "id": "ef5faa1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "x_scaler = MinMaxScaler()\n",
-    "c_scaler = MinMaxScaler()\n",
-    "x_train = x_scaler.fit_transform(x_train)\n",
-    "c_train = c_scaler.fit_transform(c_train)\n",
-    "x_val,x_test = [x_scaler.transform(x) for x in [x_val,x_test]]\n",
-    "c_val,c_test = [c_scaler.transform(c) for c in [c_val,c_test]]"
+    "x_train,x_val,x_test = [np.log1p(x) for x in [x_train,x_val,x_test]]\n",
+    "c_train,c_val,c_test = [np.log1p(x) for x in [c_train,c_val,c_test]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "afee41d0",
+   "execution_count": 69,
+   "id": "d5b4db89",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./torch/c_scaler.pkl']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import joblib \n",
+    "# from sklearn.preprocessing import MinMaxScaler\n",
+    "# x_scaler = MinMaxScaler()\n",
+    "# c_scaler = MinMaxScaler()\n",
+    "# x_train = x_scaler.fit_transform(x_train)\n",
+    "# c_train = c_scaler.fit_transform(c_train)\n",
+    "# x_val,x_test = [x_scaler.transform(x) for x in [x_val,x_test]]\n",
+    "# c_val,c_test = [c_scaler.transform(c) for c in [c_val,c_test]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4455bef2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import joblib \n",
     "joblib.dump(x_scaler,'./torch/x_scaler.pkl')\n",
     "joblib.dump(c_scaler,'./torch/c_scaler.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "45c66958",
+   "execution_count": 71,
+   "id": "44443f53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cc868edd",
+   "execution_count": 72,
+   "id": "e592e814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,8 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "21af98eb",
+   "execution_count": 73,
+   "id": "a6a82980",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,22 +123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "05928c82",
+   "execution_count": 74,
+   "id": "fa2bc408",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "os.makedirs('torch',exist_ok = True)\n",
-    "torch.save(train_loader,\"torch/train_loader.pt\")\n",
-    "torch.save(val_loader,\"torch/val_loader.pt\")\n",
-    "torch.save(test_loader,\"torch/test_loader.pt\")"
+    "torch.save(train_loader,\"torch/train_loader_new.pt\")\n",
+    "torch.save(val_loader,\"torch/val_loader_new.pt\")\n",
+    "torch.save(test_loader,\"torch/test_loader_new.pt\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "torch_gpu",
    "language": "python",
    "name": "python3"
   },
