--- a/data_z_score.ipynb
+++ b/data_z_score.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "f42b2e25",
+   "execution_count": 11,
+   "id": "a0b225a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "26439ff9",
+   "execution_count": 12,
+   "id": "b6e6a7cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18a2e9cf",
+   "id": "ed38d1d2",
    "metadata": {},
    "source": [
     "### train_test_split을 활용해 데이터를 train,val,test로 해서 0.6,0.2,0.2로 나눠서 구분\n",
@@ -33,32 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "23700e0f",
+   "execution_count": 13,
+   "id": "bad72b39",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "x_train,x_test,c_train,c_test = train_test_split(x_data,c_data,random_state = 21,test_size = 0.4)\n",
-    "x_val,x_test,c_val,c_test = train_test_split(x_test,c_test,random_state = 21, test_size = 0.5)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e2de9846",
-   "metadata": {},
-   "source": [
-    "### MinMaxScaler을 활용해서 데이터를 normalization진행"
+    "x_val,x_test,c_val,c_test = train_test_split(x_test,c_test,random_state = 21, test_size = 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "403e5865",
+   "execution_count": 14,
+   "id": "d5b4db89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler # z_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "x_scaler = StandardScaler()\n",
     "c_scaler = StandardScaler()\n",
     "x_train = x_scaler.fit_transform(x_train)\n",
@@ -69,31 +61,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "afee41d0",
+   "execution_count": 15,
+   "id": "4455bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['./torch/c_scaler_z.pkl']"
+       "['./torch/c_scaler.pkl']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import joblib \n",
-    "joblib.dump(x_scaler,'./torch/x_scaler_z.pkl')\n",
-    "joblib.dump(c_scaler,'./torch/c_scaler_z.pkl')"
+    "joblib.dump(x_scaler,'./torch/x_scaler.pkl')\n",
+    "joblib.dump(c_scaler,'./torch/c_scaler.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "45c66958",
+   "execution_count": 16,
+   "id": "44443f53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "cc868edd",
+   "execution_count": 17,
+   "id": "e592e814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,8 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "21af98eb",
+   "execution_count": 18,
+   "id": "a6a82980",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,16 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "05928c82",
+   "execution_count": 19,
+   "id": "fa2bc408",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "os.makedirs('torch',exist_ok = True)\n",
-    "torch.save(train_loader,\"torch/train_loader_z.pt\")\n",
-    "torch.save(val_loader,\"torch/val_loader_z.pt\")\n",
-    "torch.save(test_loader,\"torch/test_loader_z.pt\")"
+    "torch.save(train_loader,\"torch/train_loader.pt\")\n",
+    "torch.save(val_loader,\"torch/val_loader.pt\")\n",
+    "torch.save(test_loader,\"torch/test_loader.pt\")"
    ]
   }
  ],
