--- a/1_9_vae copy.ipynb
+++ b/1_9_vae copy.ipynb
@@ -419,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_gpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
