--- a/earlier_practice/epoch_loss1.ipynb
+++ b/earlier_practice/epoch_loss1.ipynb
@@ -488,7 +488,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_gpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
