--- a/1_20_epoch_loss3 copy.ipynb
+++ b/1_20_epoch_loss3 copy.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "1c5626fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "from model.model_vae_3no_sig_1 import CVAE, cvae_loss_masked ## 따로 sigmoid 진행하지 않았음\n",
+    "from model.new_1_20_vae import CVAEHurdle, hurdle_lognormal_cvae_loss ## 따로 sigmoid 진행하지 않았음\n",
     "from vae_earlystopping import EarlyStopping\n",
     "import numpy as np\n",
     "import joblib\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "bbe4bbb4",
    "metadata": {},
    "outputs": [
@@ -25,11 +25,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_12452\\3444673415.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_9540\\3444673415.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  train_loader = torch.load('torch/train_loader.pt')\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_12452\\3444673415.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_9540\\3444673415.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  val_loader = torch.load('torch/val_loader.pt')\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_12452\\3444673415.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_9540\\3444673415.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  test_loader = torch.load('torch/test_loader.pt')\n"
      ]
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "83335d02",
    "metadata": {},
    "outputs": [
@@ -63,19 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "bdf1053b",
    "metadata": {},
    "outputs": [],
    "source": [
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "model = CVAE(x_dim=x_dim,c_dim = c_dim).to(device)\n",
+    "model = CVAEHurdle(x_dim=x_dim,c_dim = c_dim).to(device)\n",
     "optimizer = torch.optim.Adam(model.parameters(),lr = 1e-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bef243cd",
    "metadata": {},
    "outputs": [
@@ -101,32 +101,21 @@
    "source": [
     "epochs = 500\n",
     "\n",
-    "train_loss_total_1 = []\n",
-    "train_recon_all_1 = []\n",
-    "train_recon_nonzero_1 = []\n",
-    "train_recon_zero_1 = []\n",
-    "train_kl_1 = []\n",
-    "\n",
-    "val_loss_total_1 = []\n",
-    "val_recon_all_1 = []\n",
-    "val_recon_nonzero_1 = []\n",
-    "val_recon_zero_1 = []\n",
-    "val_kl_1 = []\n",
-    "\n",
     "early = EarlyStopping(patience=30, min_delta=1e-4)\n",
-    "\n",
+    "train_losses = []\n",
+    "train_recones = []\n",
+    "train_kl = []\n",
+    "val_losses = []\n",
+    "val_recones = []\n",
+    "val_kl = []\n",
     "for epoch in range(1, epochs + 1):\n",
     "    # -------------------------\n",
     "    # Train\n",
     "    # -------------------------\n",
     "    model.train()\n",
-    "\n",
-    "    train_loss_totals = 0.0\n",
-    "    train_recon_alls = 0.0\n",
-    "    train_recon_nonzeros = 0.0\n",
-    "    train_recon_zeros = 0.0\n",
-    "    train_kls = 0.0\n",
-    "\n",
+    "    tot_train_loss = 0.0\n",
+    "    tot_train_recon = 0.0\n",
+    "    tot_train_kl = 0.0\n",
     "    for x, c in train_loader:\n",
     "        x = x.to(device)\n",
     "        c = c.to(device)\n",
@@ -134,40 +123,34 @@
     "        x_hat, mu, logvar = model(x, c)\n",
     "\n",
     "        # 니켈 유무 분리 loss 계산\n",
-    "        train_loss_total, train_recon_all, train_recon_nonzero, train_recon_zero, train_kl = cvae_loss_masked(\n",
-    "            x_hat, x, mu, logvar,\n",
-    "            beta=0.01,\n",
-    "            nonzero_weight = 0.8\n",
-    "        )\n",
+    "        loss, recon, bce_loss, pos_loss, kl = hurdle_lognormal_cvae_loss(\n",
+    "        p_logits, mu_log, logvar_log,\n",
+    "        x, mu_z, logvar_z,\n",
+    "        beta=1.0,\n",
+    "        lambda_bce=1.0,\n",
+    "        lambda_pos=1.0,\n",
+    "        pos_weight=pos_weight)\n",
     "\n",
     "        optimizer.zero_grad()\n",
     "        train_loss_total.backward()\n",
     "        optimizer.step()\n",
     "        # train_total\n",
-    "        train_loss_totals +=train_loss_total.item()/len(train_loader)\n",
-    "        train_recon_alls += train_recon_all.item()/len(train_loader)\n",
-    "        train_recon_nonzeros += train_recon_nonzero.item()/len(train_loader)\n",
-    "        train_recon_zeros += train_recon_zero.item()/len(train_loader)\n",
-    "        train_kls += train_kl.item()/len(train_loader)\n",
+    "        tot_train_loss = loss.item()/len(train_loader)\n",
+    "        tot_train_recon = recon.item()/len(train_loader)\n",
+    "        tot_train_kl = kl.item()/len(train_loader)\n",
     "\n",
-    "    train_loss_total_1.append(train_loss_totals)\n",
-    "    train_recon_all_1.append(train_recon_alls)\n",
-    "    train_recon_nonzero_1.append(train_recon_nonzeros)\n",
-    "    train_recon_zero_1.append(train_recon_zeros)\n",
-    "    train_kl_1.append(train_kls)\n",
-    "\n",
+    "    train_losses.append(tot_train_loss)\n",
+    "    train_recones.append(tot_train_recon)\n",
+    "    train_kl.append(tot_train_kl)\n",
     "        \n",
     "\n",
     "    # -------------------------\n",
     "    # Validation\n",
     "    # -------------------------\n",
     "    model.eval()\n",
-    "\n",
-    "    val_loss_totals = 0.0\n",
-    "    val_recon_alls = 0.0\n",
-    "    val_recon_nonzeros = 0.0\n",
-    "    val_recon_zeros = 0.0\n",
-    "    val_kls = 0.0\n",
+    "    tot_val_loss = 0.0\n",
+    "    tot_val_recon = 0.0\n",
+    "    tot_val_kl = 0.0\n",
     "\n",
     "    with torch.no_grad():\n",
     "        for v_x, v_c in val_loader:\n",
@@ -176,23 +159,19 @@
     "\n",
     "            v_x_hat, v_mu, v_logvar = model(v_x, v_c)\n",
     "\n",
-    "            v_loss_total, v_recon_all, v_recon_nonzero, v_recon_zero, v_kl = cvae_loss_masked(\n",
-    "                v_x_hat, v_x, v_mu, v_logvar,\n",
-    "                beta=0.01,\n",
-    "                nonzero_weight = 0.8\n",
-    "            )\n",
-    "        val_loss_totals      += v_loss_total.item()      / len(val_loader)\n",
-    "        val_recon_alls       += v_recon_all.item()       / len(val_loader)\n",
-    "        val_recon_nonzeros  += v_recon_nonzero.item()   / len(val_loader)\n",
-    "        val_recon_zeros      += v_recon_zero.item()      / len(val_loader)\n",
-    "        val_kls              += v_kl.item()              / len(val_loader)\n",
+    "            v_loss, v_recon, v_bce_loss, v_pos_loss, v_kl = hurdle_lognormal_cvae_loss(\n",
+    "            p_logits, mu_log, logvar_log,\n",
+    "            x, mu_z, logvar_z,\n",
+    "            beta=1.0,\n",
+    "            lambda_bce=1.0,\n",
+    "            lambda_pos=1.0,\n",
+    "            pos_weight=pos_weight)\n",
+    "            tot_val_loss +=v_loss.item()/len(val_loader)\n",
+    "            tot_val_recon +=v_recon.item()/len(val_loader)\n",
+    "            tot_val_kl +=v_kl.item()/len(val_loader)\n",
+    "        \n",
     "\n",
-    "    val_loss_total_1.append(val_loss_totals)\n",
-    "    val_recon_all_1.append(val_recon_alls)\n",
-    "    val_recon_nonzero_1.append(val_recon_nonzeros)\n",
-    "    val_recon_zero_1.append(val_recon_zeros)\n",
-    "    val_kl_1.append(val_kls)\n",
-    "\n",
+    "    val_\n",
     "    # -------------------------\n",
     "    # Print\n",
     "    # -------------------------\n",
