--- a/data_1preprocessing_1.ipynb
+++ b/data_1preprocessing_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "a0b225a2",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "b6e6a7cf",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "bad72b39",
    "metadata": {},
    "outputs": [],
@@ -46,18 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "ef5faa1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# x_train,x_val,x_test = [np.log1p(x) for x in [x_train,x_val,x_test]]\n",
-    "# c_train,c_val,c_test = [np.log1p(x) for x in [c_train,c_val,c_test]]"
+    "x_train,x_val,x_test = [np.log1p(x) for x in [x_train,x_val,x_test]]\n",
+    "c_train,c_val,c_test = [np.log1p(x) for x in [c_train,c_val,c_test]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "d5b4db89",
    "metadata": {},
    "outputs": [],
@@ -73,30 +73,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "4455bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['./torch/c_scaler.pkl']"
+       "['./torch/c_scaler_1.pkl']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# import joblib \n",
-    "joblib.dump(x_scaler,'./torch/x_scaler.pkl')\n",
-    "joblib.dump(c_scaler,'./torch/c_scaler.pkl')"
+    "joblib.dump(x_scaler,'./torch/x_scaler_1.pkl')\n",
+    "joblib.dump(c_scaler,'./torch/c_scaler_1.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "44443f53",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "e592e814",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "a6a82980",
    "metadata": {},
    "outputs": [],
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "fa2bc408",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "os.makedirs('torch',exist_ok = True)\n",
-    "torch.save(train_loader,\"torch/train_loader.pt\")\n",
-    "torch.save(val_loader,\"torch/val_loader.pt\")\n",
-    "torch.save(test_loader,\"torch/test_loader.pt\")"
+    "torch.save(train_loader,\"torch/train_loader_1.pt\")\n",
+    "torch.save(val_loader,\"torch/val_loader_1.pt\")\n",
+    "torch.save(test_loader,\"torch/test_loader_1.pt\")"
    ]
   }
  ],
