--- a/practice/1_14_model_earlystopping.ipynb
+++ b/practice/1_14_model_earlystopping.ipynb
@@ -548,7 +548,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "torch_gpu",
    "language": "python",
    "name": "python3"
   },
