--- a/1_21_hurdle.ipynb
+++ b/1_21_hurdle.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "18d14469",
    "metadata": {},
    "outputs": [
@@ -136,98 +136,76 @@
    ],
    "source": [
     "import numpy as np\n",
-    "import torch\n",
     "import joblib\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import r2_score, mean_absolute_error\n",
+    "import torch.nn.functional as F\n",
+    "from sklearn.metrics import r2_score, classification_report\n",
     "\n",
-    "# 1) 스케일러 로드\n",
-    "x_scaler = joblib.load('./torch/x_scaler_1.pkl')\n",
+    "# 1. 환경 설정 및 데이터 로드\n",
+    "x_scaler = joblib.load('./torch/x_scaler.pkl')\n",
+    "test_loader = torch.load('torch/test_loader_new.pt')\n",
     "model.eval()\n",
     "\n",
     "all_x_test_raw = []\n",
     "all_x_hat_raw = []\n",
+    "all_pred_classes = []\n",
+    "all_true_classes = []\n",
     "\n",
-    "print(\"Log1p + StandardScaler 역변환 분석 시작...\")\n",
+    "print(\"Multi-Hurdle CVAE 테스트 분석 시작...\")\n",
     "\n",
     "with torch.no_grad():\n",
     "    for x_t, c_t in test_loader:\n",
     "        x_t, c_t = x_t.to(device), c_t.to(device)\n",
+    "        target_v = get_target_classes(x_t).to(device)\n",
     "        \n",
-    "        # 모델 출력 (StandardScaler가 적용된 Domain)\n",
-    "        p_logits, mu_log, logvar_log, _, _ = model(x_t, c_t)\n",
-    "        prob = torch.sigmoid(p_logits).cpu().numpy()\n",
+    "        # 모델 추론\n",
+    "        logits, mu_val, _, _ = model(x_t, c_t)\n",
     "        \n",
-    "        # --- [핵심] 역변환 로직 수정 ---\n",
-    "        mu_scaled = mu_log.cpu().numpy()\n",
-    "        var_scaled = torch.exp(torch.clamp(logvar_log, min=-7, max=2)).cpu().numpy()\n",
+    "        # (1) 분류: Softmax를 통한 클래스 확률 및 최종 클래스 결정\n",
+    "        probs = F.softmax(logits, dim=-1) # (B, x_dim, num_classes)\n",
+    "        pred_class = torch.argmax(probs, dim=-1) # 가장 확률 높은 클래스\n",
     "        \n",
-    "        # 1. StandardScaler 역변환 (로그 도메인으로 복구)\n",
-    "        mu_log_domain = x_scaler.inverse_transform(mu_scaled)\n",
-    "        var_log_domain = var_scaled * (x_scaler.scale_ ** 2) # 분산 스케일 조정\n",
+    "        # 존재 확률 (클래스 0이 아닐 확률들의 합)\n",
+    "        prob_presence = 1.0 - probs[:, :, 0] \n",
     "        \n",
-    "        # 2. Log-Normal 기댓값 계산 후 expm1 (Original Scale 복구)\n",
-    "        # E[X] = exp(mu + 0.5*sigma^2) - 1\n",
-    "        pred_raw = np.expm1(mu_log_domain + 0.5 * var_log_domain)\n",
-    "        \n",
-    "        # 실제값 역변환 (StandardScaler -> expm1)\n",
-    "        actual_log_domain = x_scaler.inverse_transform(x_t.cpu().numpy())\n",
-    "        actual_raw = np.expm1(actual_log_domain)\n",
-    "        \n",
-    "        # 3. Soft Hurdle 결합\n",
-    "        x_hat_final = prob * pred_raw\n",
+    "        # (2) 회귀: 예측된 mu_val 역변환\n",
+    "        # StandardScaler만 사용했으므로 바로 역변환\n",
+    "        pred_raw = x_scaler.inverse_transform(mu_val.cpu().numpy())\n",
+    "        actual_raw = x_scaler.inverse_transform(x_t.cpu().numpy())\n",
+    "\n",
+    "        # (3) 결합 (Hurdle logic)\n",
+    "        # 클래스가 0(없음)으로 예측되면 0으로 만들거나, 확률을 가중치로 곱함\n",
+    "        # 여기서는 Soft-hurdle 방식 적용: (존재 확률 * 예측 수치)\n",
+    "        x_hat_final = prob_presence.cpu().numpy() * pred_raw\n",
     "        \n",
     "        all_x_test_raw.append(actual_raw)\n",
     "        all_x_hat_raw.append(x_hat_final)\n",
+    "        all_pred_classes.append(pred_class.cpu().numpy())\n",
+    "        all_true_classes.append(target_v.cpu().numpy())\n",
     "\n",
     "# 데이터 평탄화\n",
     "all_x_test_raw = np.concatenate(all_x_test_raw, axis=0).ravel()\n",
     "all_x_hat_raw = np.concatenate(all_x_hat_raw, axis=0).ravel()\n",
+    "all_pred_classes = np.concatenate(all_pred_classes, axis=0).ravel()\n",
+    "all_true_classes = np.concatenate(all_true_classes, axis=0).ravel()\n",
     "\n",
-    "# 로그 도메인 R2 산출 (log1p 기반)\n",
-    "log_true = np.log1p(np.maximum(all_x_test_raw, 0))\n",
-    "log_pred = np.log1p(np.maximum(all_x_hat_raw, 0))\n",
-    "global_r2_log = r2_score(log_true, log_pred)\n",
+    "# 수치 결과 보정\n",
+    "all_x_hat_raw = np.maximum(all_x_hat_raw, 0)\n",
     "\n",
-    "# --- 시각화 ---\n",
-    "plt.figure(figsize=(15, 6))\n",
+    "# 3. 성능 지표 출력\n",
+    "print(\"\\n[Classification Report - Presence Classes]\")\n",
+    "print(classification_report(all_true_classes, all_pred_classes))\n",
     "\n",
-    "# (1) Global Parity Plot (축만 로그 스케일, 값은 원본)\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.scatter(all_x_test_raw, all_x_hat_raw, alpha=0.3, s=15, color='royalblue')\n",
+    "r2 = r2_score(all_x_test_raw, all_x_hat_raw)\n",
+    "print(f\"\\nFinal R2 Score: {r2:.4f}\")\n",
     "\n",
-    "# 축을 로그 스케일로 설정 (0 근처 표현을 위해 symlog 사용)\n",
-    "plt.xscale('symlog', linthresh=1e-3)\n",
-    "plt.yscale('symlog', linthresh=1e-3)\n",
-    "\n",
-    "limit = np.max([all_x_test_raw.max(), all_x_hat_raw.max()]) * 1.5\n",
-    "plt.plot([0, limit], [0, limit], 'r--', lw=2, label='Ideal')\n",
-    "\n",
-    "plt.title(f'Global Parity Plot (Log-Log Axis)\\nLog-Domain R2: {global_r2_log:.4f}', fontsize=14)\n",
-    "plt.xlabel('Actual (Original Scale)')\n",
-    "plt.ylabel('Predicted (Original Scale)')\n",
-    "plt.grid(True, which=\"both\", alpha=0.3)\n",
-    "plt.legend()\n",
-    "\n",
-    "# (2) Global Error Distribution (잔차)\n",
-    "plt.subplot(1, 2, 2)\n",
-    "residuals = all_x_test_raw - all_x_hat_raw\n",
-    "global_mae = mean_absolute_error(all_x_test_raw, all_x_hat_raw)\n",
-    "\n",
-    "# 가독성을 위한 범위 제한 (1%~99% percentile)\n",
-    "hist_range = (np.percentile(residuals, 1), np.percentile(residuals, 99))\n",
-    "plt.hist(residuals, bins=100, color='orange', alpha=0.7, range=hist_range)\n",
-    "plt.axvline(0, color='red', linestyle='--')\n",
-    "\n",
-    "plt.title(f'Global Error Distribution\\nGlobal MAE: {global_mae:.6f}', fontsize=14)\n",
-    "plt.xlabel('Residual (Actual - Predicted)')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.grid(True, alpha=0.3)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "print(f\"Final Log-Domain R2: {global_r2_log:.4f}\")"
+    "# 시각화 (예측 vs 실제)\n",
+    "plt.figure(figsize=(6,6))\n",
+    "plt.scatter(all_x_test_raw, all_x_hat_raw, alpha=0.1)\n",
+    "plt.plot([all_x_test_raw.min(), all_x_test_raw.max()], [all_x_test_raw.min(), all_x_test_raw.max()], 'r--')\n",
+    "plt.title(f\"Actual vs Predicted (R2: {r2:.4f})\")\n",
+    "plt.xlabel(\"Actual\")\n",
+    "plt.ylabel(\"Predicted\")\n",
+    "plt.show()"
    ]
   }
  ],
