--- a/data_save.ipynb
+++ b/data_save.ipynb
@@ -31,6 +31,33 @@
     "np.save('./data/nickel_except.npy',nickel_except_df)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dd1f71b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Co', 'Ba', 'Ca', 'Cu', 'Ce', 'Mn', 'La', 'Ni', 'Ag', 'Pt', 'Mg', 'Ir',\n",
+       "       'Au', 'K', 'Li', 'Ru', 'Rh', 'Fe', 'Pr', 'Pd', 'Sr', 'Y', 'Zr'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#binary 데이터\n",
+    "import pandas as pd\n",
+    "df =pd.read_csv('211210-DRM-total.csv')\n",
+    "metal_columns = df.iloc[:,2:25].columns\n",
+    "metal_columns"
+   ]
   }
  ],
  "metadata": {
